--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,6 +56,7 @@ producto.total=Total Productos
 pruebas.todas=Todas
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
+pruebas.precio.superioroigual=Precio Superior o Igual
 pruebas.ampliadas=Consultas Ampliadas
 pruebas.jpql=Consultas JPQL
 pruebas.nativo=Consultas Nativas
